minor text adjust in about

--- a/hugo.toml
+++ b/hugo.toml
@@ -19,7 +19,7 @@ avatarURL = "images/me.jpeg"
 images = ["images/an-cover.png"]
 description = "ANetto.dev personal website"
 keywords = "developer,desenvolvedor,engineer,software,staff,iOS,swift,objective-c,obj-c,c++,C#,python,go,rust"
-info = " iOS Dev Specialist Master"
+info = " iOS Senior Staff Engineer"
 company = "Inter"
 companyURL = "https://inter.co/"
 
