--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 [submodule "themes/hugo-shortcode-timeline"]
 	path = themes/hugo-shortcode-timeline
 	url = https://github.com/anettodev/hugo-shortcode-timeline.git
+[submodule "hugo-calendly-shortcode"]
+	path = hugo-calendly-shortcode
+	url = git@github.com:anettodev/hugo-calendly-shortcode.git
